--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <title>로그인 페이지</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
+<header>
+  <div><h1><a href="/" style="text-decoration: none; color: inherit;">NBC-CODESOURCECOMMUNITY</a></h1></div>
+</header>
 <h2>로그인</h2>
 <form id="loginForm">
   <div>
@@ -17,7 +22,7 @@
     <input type="password" id="password" name="password">
   </div>
   <button type="submit">로그인</button>
-  <a href="/signup.html">회원가입</a>
+  <a href="signup.html" class="btn">회원가입</a>
 </form>
 </body>
 <script>
