--- a/src/main/resources/public/mypage.html
+++ b/src/main/resources/public/mypage.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <title>회원 정보 페이지</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<header>
+  <div><h1><a href="mainpage.html" style="text-decoration: none; color: inherit;">NBC-CODESOURCECOMMUNITY</a></h1></div>
+  <div>
+    <a href="/" class="btn">로그아웃</a>
+    <a href="createBoard.html" class="btn">게시글 작성</a>
+    <a href="mypage.html" class="btn">내 정보</a>
+  </div>
+</header>
 <h2>회원 정보</h2>
 
 <!-- 회원 정보를 보여줄 곳 -->
@@ -16,12 +25,14 @@
   </ul>
 </div>
 
+<div id="editButtons">
 <!-- 닉네임 수정 버튼 -->
-<button id="editNicknameBtn">닉네임 수정</button>
+<button id="editNicknameBtn" class="btn">닉네임 수정</button>
 <!-- 소개글 수정 버튼 -->
-<button id="editIntroBtn">소개글 수정</button>
+<button id="editIntroBtn" class="btn">소개글 수정</button>
 <!-- 패스워드 수정 버튼 -->
-<button id="editPasswordBtn">패스워드 수정</button>
+<button id="editPasswordBtn" class="btn">패스워드 수정</button>
+</div>
 
 <script>
   // 페이지 로드 시 토큰을 사용하여 회원 정보를 가져와서 화면에 표시
