--- a/src/main/resources/public/selectBoard.html
+++ b/src/main/resources/public/selectBoard.html
@@ -5,26 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>게시글 상세 조회</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<style>
+  .editCommentInput {
+    display: block; /* 입력란을 블록 요소로 설정하여 한 줄을 차지하도록 함 */
+    width: 25%; /* 입력란이 부모 요소의 너비를 모두 차지하도록 함 */
+    height: 40px;
+  }
+</style>
 <body>
+<header>
+  <div><h1><a href="mainpage.html" style="text-decoration: none; color: inherit;">NBC-CODESOURCECOMMUNITY</a></h1></div>
+  <div>
+    <a href="/" class="btn">로그아웃</a>
+    <a href="createBoard.html" class="btn">게시글 작성</a>
+    <a href="mypage.html" class="btn">내 정보</a>
+  </div>
+</header>
 <h1>게시글 상세 조회</h1>
 <div id="boardDetail">
   <!-- 서버에서 받아온 게시글 상세 정보를 표시할 곳 -->
 </div>
 
-<!-- 수정하기 버튼 -->
-<button id="editButton">수정하기</button>
+<div>
+  <!-- 수정하기 버튼 -->
+  <button id="editButton" class="btn">수정하기</button>
+  <!-- 업데이트 버튼 -->
+  <button id="updateButton" style="display: none;" class="btn">업데이트</button>
+
+</div>
 
 <h2>전체 댓글</h2>
+
+<form id="commentForm">
+  <div>
+    <label for="comment">댓글 입력:</label>
+    <input type="text" id="comment" name="comment">
+  </div>
+  <button type="submit">댓글 생성</button>
+</form>
+
 <ul id="commentList">
   <!-- 서버에서 받아온 전체 댓글을 여기에 표시할 것입니다. -->
 </ul>
 
 <script>
   $(document).ready(function() {
+    var boardId;
+
     // URL에서 boardId를 추출
     var urlParams = new URLSearchParams(window.location.search);
-    var boardId = urlParams.get('boardId');
+    boardId = urlParams.get('boardId');
 
     // 서버로부터 해당 게시글의 상세 정보를 가져오는 AJAX 요청
     $.ajax({
@@ -32,8 +64,8 @@
       type: "GET",
       success: function(response) {
         var boardDetailDiv = $("#boardDetail");
-        boardDetailDiv.append("<p><strong>제목:</strong> " + response.title + "</p>");
-        boardDetailDiv.append("<p><strong>내용:</strong> " + response.content + "</p>");
+        boardDetailDiv.append("<p><strong>제목:</strong> <span id='title'>" + response.title + "</span></p>");
+        boardDetailDiv.append("<p><strong>내용:</strong> <span id='content'>" + response.content + "</span></p>");
         boardDetailDiv.append("<p><strong>작성자:</strong> " + response.author + "</p>");
       },
       error: function(xhr, status, error) {
@@ -41,49 +73,170 @@
         console.error("에러:", error);
       }
     });
+    loadComments();
 
-    // 수정하기 버튼 클릭 시 수정 페이지로 이동
+    // 수정하기 버튼 클릭 시 수정 가능한 필드로 변경
     $("#editButton").click(function() {
-      window.location.href = "editPage.html?boardId=" + boardId;
+      $("#title").replaceWith("<input type='text' id='titleInput' value='" + $("#title").text() + "'>");
+      $("#content").replaceWith("<textarea id='contentInput'>" + $("#content").text() + "</textarea>");
+      $(this).hide(); // 수정 버튼 숨기기
+      $("#updateButton").show(); // 업데이트 버튼 표시
     });
 
-    // 전체 댓글 조회
-    $.ajax({
-      url: "/comments?boardId=" + boardId,
-      type: "GET",
-      success: function(response) {
-        var commentList = $("#commentList");
-        response.forEach(function(comment) {
-          var li = $("<li>").text(comment.text);
-          var replyButton = $("<button>").text("대댓글 보기"); // 대댓글 보기 버튼 생성
-          replyButton.click(function() {
-            var replyList = $("<ul>"); // 대댓글을 표시할 리스트 생성
-            // 대댓글을 가져오는 AJAX 요청
-            $.ajax({
-              url: "/replies?commentId=" + comment.id, // 해당 댓글의 대댓글을 가져오는 엔드포인트로 URL 구성
-              type: "GET",
-              success: function(replies) {
-                // 요청이 성공하면 실행할 작업
-                replies.forEach(function(reply) {
-                  replyList.append($("<li>").text(reply.text));
-                });
-                // 대댓글 리스트를 보여줍니다.
-                $(replyButton).after(replyList);
-              },
-              error: function(xhr, status, error) {
-                console.error("대댓글을 가져오는데 실패하였습니다.");
-                console.error("에러:", error);
-              }
-            });
+    // 업데이트 버튼 클릭 시 서버로 수정된 데이터 전송
+    $("#updateButton").click(function() {
+      var updatedTitle = $("#titleInput").val();
+      var updatedContent = $("#contentInput").val();
+
+      // 수정된 데이터를 AJAX 요청으로 서버에 전송
+      $.ajax({
+        url: "/boards/" + boardId,
+        type: "PATCH",
+        contentType: "application/json",
+        data: JSON.stringify({ title: updatedTitle, content: updatedContent }),
+        success: function(response) {
+          alert("게시글이 업데이트되었습니다.");
+          window.location.reload(); // 페이지 새로고침
+        },
+        error: function(xhr, status, error) {
+          console.error("게시글 업데이트에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+
+    // 댓글 생성 폼 제출 시
+    $("#commentForm").submit(function(event) {
+      event.preventDefault(); // 기본 제출 이벤트 막기
+      var commentContent = $("#comment").val();
+      console.log(commentContent)
+      // 댓글 생성 요청 보내기
+      $.ajax({
+        url: "/boards/" + boardId + "/comments",
+        type: "POST",
+        contentType: "application/json",
+        data: JSON.stringify({ comment: commentContent }),
+        success: function(response) {
+          alert("댓글이 생성되었습니다.");
+          // 새로운 댓글을 추가하기 위한 HTML 코드를 생성합니다.
+          loadComments();
+          // window.location.reload(); // 페이지 새로고침
+        },
+        error: function(xhr, status, error) {
+          console.error("댓글 생성에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+
+    // 댓글 목록을 가져와서 화면에 표시하는 함수
+    function loadComments() {
+      // 서버로부터 댓글 목록을 가져오는 AJAX 요청
+      $.ajax({
+        url: "/boards/" + boardId + "/comments",
+        type: "GET",
+        success: function(response) {
+          var commentList = $("#commentList");
+          commentList.empty(); // 기존 댓글을 모두 지웁니다.
+
+          // 서버에서 받아온 댓글 목록을 반복하여 화면에 표시합니다.
+          response.forEach(function(comment) {
+            // 작성자, 댓글 내용, 수정 및 삭제 버튼을 포함하는 li 요소 생성
+            var li = $("<li>");
+
+            // 작성자 표시
+            var authorDiv = $("<div>").text(comment.nickname);
+            li.append(authorDiv);
+
+            // 댓글 내용 표시
+            var commentDiv = $("<div class='commentContent'>").text(comment.comment);
+            li.append(commentDiv);
+
+            // 수정 버튼 추가
+            var editButton = $("<button>").text("수정").addClass("editComment");
+            li.append(editButton);
+
+            // 삭제 버튼 추가
+            var deleteButton = $("<button>").text("삭제").addClass("deleteComment");
+            li.append(deleteButton);
+
+            // li 요소에 commentId를 저장합니다.
+            li.attr("data-id", comment.commentId);
+
+            // li 요소를 댓글 목록에 추가합니다.
+            commentList.append(li);
           });
-          li.append(replyButton); // 댓글 옆에 대댓글 보기 버튼 추가
-          commentList.append(li);
-        });
-      },
-      error: function(xhr, status, error) {
-        console.error("전체 댓글을 가져오는데 실패하였습니다.");
-        console.error("에러:", error);
-      }
+        },
+        error: function(xhr, status, error) {
+          console.error("댓글 목록을 가져오는데 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    }
+    // 수정 버튼 클릭 시 댓글 수정 모드로 전환
+    $("#commentList").on("click", ".editComment", function() {
+      // 댓글 내용 가져오기
+      var commentContent = $(this).siblings(".commentContent").text();
+
+      // 댓글 내용을 수정 가능한 입력란으로 변경
+      var commentInput = $("<input>").attr("type", "text").addClass("editCommentInput").val(commentContent);
+      $(this).siblings(".commentContent").replaceWith(commentInput);
+
+      // 수정 버튼을 완료 버튼으로 변경
+      $(this).text("완료").removeClass("editComment").addClass("completeEdit");
+    });
+
+    // 완료 버튼 클릭 시 수정된 내용을 서버에 전송하고 화면 업데이트
+    $("#commentList").on("click", ".completeEdit", function() {
+      // 수정된 댓글 내용 가져오기
+      var editedComment = $(this).siblings(".editCommentInput").val();
+      var commentId = $(this).parent().attr("data-id");
+
+      // 완료 버튼 클릭 이벤트 함수 바깥에서 $(this)를 저장
+      var that = $(this);
+
+      // AJAX를 사용하여 수정된 댓글 내용을 서버에 전송하는 코드 추가
+      // (서버로 전송하는 부분은 여기에 구현해야 함)
+      $.ajax({
+        url: "/boards/" + boardId + "/comments/" + commentId,
+        type: "PATCH",
+        contentType: "application/json",
+        data: JSON.stringify({ comment: editedComment }),
+        success: function(response) {
+          // 수정이 완료되면 화면 업데이트
+          console.log('수정성공')
+          that.siblings(".editCommentInput").replaceWith("<div class='commentContent'>" + editedComment + "</div>");
+
+          // 완료 버튼을 수정 버튼으로 변경
+          that.text("수정").removeClass("completeEdit").addClass("editComment");
+        },
+        error: function(xhr, status, error) {
+          console.error("댓글 수정에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+    // 댓글 삭제 버튼 클릭 시
+    $("#commentList").on("click", ".deleteComment", function() {
+      // 삭제할 댓글의 ID 가져오기
+      var commentId = $(this).parent().attr("data-id");
+      var that = $(this);
+
+      // AJAX를 사용하여 댓글 삭제 요청을 서버에 보내는 코드 추가
+      $.ajax({
+        url: "/boards/" + boardId + "/comments/" + commentId,
+        type: "DELETE",
+        success: function(response) {
+          // 삭제 요청이 성공하면 화면에서 해당 댓글 제거
+          that.parent().remove();
+          console.log('댓글 삭제 성공');
+
+        },
+        error: function(xhr, status, error) {
+          console.error("댓글 삭제에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
     });
   });
 </script>
