--- a/src/main/resources/public/selectBoard.html
+++ b/src/main/resources/public/selectBoard.html
@@ -148,9 +148,17 @@
             var authorDiv = $("<div>").text(comment.nickname);
             li.append(authorDiv);
 
+            // 수평선 추가
+            var hr = $("<hr>");
+            li.append(hr);
+
             // 댓글 내용 표시
             var commentDiv = $("<div class='commentContent'>").text(comment.comment);
             li.append(commentDiv);
+
+            // 수평선 추가
+            var hr = $("<hr>");
+            li.append(hr);
 
             // 수정 버튼 추가
             var editButton = $("<button>").text("수정").addClass("editComment");
@@ -159,6 +167,10 @@
             // 삭제 버튼 추가
             var deleteButton = $("<button>").text("삭제").addClass("deleteComment");
             li.append(deleteButton);
+
+            // 대댓글 버튼 추가
+            var reCommentButton = $("<button>").text("답글 보기").addClass("reCommentButton");
+            li.append(reCommentButton);
 
             // li 요소에 commentId를 저장합니다.
             li.attr("data-id", comment.commentId);
@@ -179,7 +191,7 @@
       var commentContent = $(this).siblings(".commentContent").text();
 
       // 댓글 내용을 수정 가능한 입력란으로 변경
-      var commentInput = $("<input>").attr("type", "text").addClass("editCommentInput").val(commentContent);
+      var commentInput = $("<textarea>").attr("type", "text").addClass("editCommentInput").val(commentContent);
       $(this).siblings(".commentContent").replaceWith(commentInput);
 
       // 수정 버튼을 완료 버튼으로 변경
@@ -205,7 +217,7 @@
         success: function(response) {
           // 수정이 완료되면 화면 업데이트
           console.log('수정성공')
-          that.siblings(".editCommentInput").replaceWith("<div class='commentContent'>" + editedComment + "</div>");
+          that.siblings(".editCommentInput").replaceWith("<div class='commentContent' style='white-space: pre-line;'>" + editedComment + "</div>");
 
           // 완료 버튼을 수정 버튼으로 변경
           that.text("수정").removeClass("completeEdit").addClass("editComment");
@@ -238,6 +250,132 @@
         }
       });
     });
+
+    // 대댓글 버튼 클릭 시 대댓글 작성 및 조회 ajax
+    $("#commentList").on("click", ".reCommentButton", function() {
+      // 해당 댓글의 ID 가져오기
+      var commentId = $(this).parent().attr("data-id");
+
+      // 대댓글을 서버에서 조회하는 AJAX 요청
+      var parentComment = $(this).parent(); // 부모 댓글 요소를 가져옵니다.
+
+      // 해당 대댓글 버튼을 누른 댓글 아래에 대댓글 입력 폼 추가
+      var reCommentForm = $("<form>").addClass("reCommentForm");
+      reCommentForm.attr("data-comment-id", commentId); // 대댓글이 속한 댓글의 ID 저장
+      reCommentForm.append("<input type='text' id='reCommentInput' placeholder='대댓글을 입력하세요'>");
+      reCommentForm.append("<button type='submit'>답글 작성</button>");
+      parentComment.append(reCommentForm);
+
+      // 대댓글을 서버에서 조회하는 AJAX 요청
+      $.ajax({
+        url: "/boards/" + boardId + "/comments/" + commentId + "/recomments",
+        type: "GET",
+        success: function(response) {
+          // 서버에서 받아온 대댓글 데이터(response)를 처리하여 화면에 표시합니다.
+          // 받아온 대댓글 데이터를 반복문으로 순회하여 각 대댓글을 화면에 추가합니다.
+          response.forEach(function(reply) {
+            console.log(reply);
+            var reComment = $("<div>").addClass("reComment").attr("data-id", reply.reCommentId).text(reply.reComment); // 대댓글 내용을 담는 div 요소를 생성합니다.
+            var editButton = $("<button>").text("수정").addClass("editReComment"); // 수정 버튼 생성
+            var deleteButton = $("<button>").text("삭제").addClass("deleteReComment"); // 삭제 버튼 생성
+            reComment.append(editButton, deleteButton); // 대댓글에 수정, 삭제 버튼 추가
+            parentComment.append(reComment); // 부모 댓글에 대댓글을 추가합니다.
+          });
+        },
+        error: function(xhr, status, error) {
+          console.error("대댓글 조회에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+
+// 대댓글 작성 폼 제출 시
+    $("#commentList").on("submit", ".reCommentForm", function(event) {
+      event.preventDefault(); // 기본 제출 이벤트 막기
+      var reCommentContent = $(this).find("#reCommentInput").val();
+      var commentId = $(this).parent().attr("data-id"); // 부모 댓글의 ID 가져오기
+
+      // 대댓글 생성 요청 보내기
+      $.ajax({
+        url: "/boards/" + boardId + "/comments/" + commentId + "/recomments",
+        type: "POST",
+        contentType: "application/json",
+        data: JSON.stringify({ reComment: reCommentContent }),
+        success: function(response) {
+          // 새로운 대댓글을 화면에 추가
+          var reCommentDiv = $("<div>").addClass("reComment").attr("data-id", response.reCommentId).text(response.reComment);
+          var editButton = $("<button>").text("수정").addClass("editReComment");
+          var deleteButton = $("<button>").text("삭제").addClass("deleteReComment");
+          reCommentDiv.append(editButton, deleteButton);
+          $(event.target).before(reCommentDiv);
+
+          // 입력 폼 비우기
+          $(event.target).find("#reCommentInput").val("");
+        },
+        error: function(xhr, status, error) {
+          console.error("대댓글 생성에 실패하였습니다.");
+          console.error("에러:", error);
+        }
+      });
+    });
+
+// 대댓글 수정 버튼 클릭 시
+    $("#commentList").on("click", ".editReComment", function() {
+      var reCommentId = $(this).closest(".reComment").attr("data-id"); // 대댓글의 ID 가져오기
+      var commentId = $(this).closest("li").attr("data-id"); // 부모 댓글의 ID 가져오기
+      var editedReComment = prompt("대댓글을 수정하세요:", $(this).closest(".reComment").children(".commentContent").text()); // 수정할 내용 입력 받기
+      var that = $(this);
+
+      if (editedReComment !== null) {
+        // 수정된 대댓글 내용을 서버에 전송
+        $.ajax({
+          url: "/boards/" + boardId + "/comments/" + commentId + "/recomments/" + reCommentId,
+          type: "PATCH",
+          contentType: "application/json",
+          data: JSON.stringify({ reComment: editedReComment }),
+          success: function(response) {
+            alert("대댓글이 수정되었습니다.");
+            // 화면 업데이트
+            var reCommentDiv = that.closest(".reComment");
+            reCommentDiv.text(editedReComment); // 수정된 내용을 화면에 표시
+
+            // 이미 존재하는 수정, 삭제 버튼을 삭제하고 다시 추가
+            reCommentDiv.find(".editReComment, .deleteReComment").remove();
+            var editButton = $("<button>").text("수정").addClass("editReComment"); // 수정 버튼 생성
+            var deleteButton = $("<button>").text("삭제").addClass("deleteReComment"); // 삭제 버튼 생성
+            reCommentDiv.append(editButton, deleteButton); // 수정, 삭제 버튼 추가
+          },
+          error: function(xhr, status, error) {
+            console.error("대댓글 수정에 실패하였습니다.");
+            console.error("에러:", error);
+          }
+        });
+      }
+    });
+
+
+// 대댓글 삭제 버튼 클릭 시
+    $("#commentList").on("click", ".deleteReComment", function() {
+      var reCommentId = $(this).parent().attr("data-id"); // 대댓글의 ID 가져오기
+
+      if (confirm("정말로 이 대댓글을 삭제하시겠습니까?")) {
+        // 대댓글 삭제 요청 보내기
+        $.ajax({
+          url: "/boards/" + boardId + "/comments/" + commentId + "/recomments/" + reCommentId,
+          type: "DELETE",
+          success: function(response) {
+            $(event.target).parent().remove();
+          },
+          error: function(xhr, status, error) {
+            console.error("대댓글 삭제에 실패하였습니다.");
+            console.error("에러:", error);
+          }
+        });
+      }
+    });
+
+
+
   });
 </script>
 </body>
